module_06/m06_demo01/m06_demo01_after/bookstore/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-ingress
spec:
  rules:
  - http:
      paths:
      - path: /login(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 3001
      - path: /(.*) # Catch-all for other requests
        pathType: Prefix
        backend:
          service:
            name: inventory-service
            port:
              number: 3002
